# tater

./: .gitignore  Cargo.toml  README.md  failing.json  repos  repos.json  tater.sh
src/: main.rs  runner.rs
src/ci/: github.rs  gitlab.rs  mod.rs  travis.rs  types.rs
