[package]
name = "tater"
version = "0.1.0"
authors = ["Daniel McKenna <danielmckenna93@gmail.com>"]
description = "Tater is a crater like tool for cargo tarpaulin"
repository = "https://github.com/xd009642/tater"
readme = "README.md"
license = "MIT"
categories = ["development-tools"]
keywords = ["testing"]
edition = "2018"

[dependencies]
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
structopt = "0.3.21"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = {version = "0.2.15", default-features = false, features = ["env-filter", "fmt", "chrono", "ansi", "smallvec", "tracing-log"]}
url = "1.0"
url_serde = "0.2.0"

